--- a/testLogging.html
+++ b/testLogging.html
@@ -14,7 +14,7 @@
       };
 
       document.getElementById("testBtn").onclick = () => {
-        fetch("YOUR_WEB_APP_URL_HERE", {
+        fetch("https://script.google.com/macros/s/AKfycbyuiI-6ro1iHIoIGzseetgNjrTj4Tc9BjQZcyVdZagZRjMgXZDZpS271fxaFcvrfioG/exec", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(testVideo)
