--- a/instagram/opaque.html
+++ b/instagram/opaque.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Full Transparency</title>
+  <link rel="stylesheet" href="../css/instagram.css">
+</head>
+<body>
+  <div class="app-container">
+    <div id="feedContainer" class="feed"></div>
+  </div>
+
+  <script src="../js/instagramOpaque.js"></script>
+</body>
+</html>
+ 
