--- a/instagram/opaque.html
+++ b/instagram/opaque.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Full Transparency</title>
+  <title>Opaque</title>
   <link rel="stylesheet" href="../css/instagram.css">
 </head>
 <body>
