--- a/youtube/opaque.html
+++ b/youtube/opaque.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Opaque Feed</title>
+  <link rel="stylesheet" href="../css/youtube.css">
+</head>
+<body>
+  <div class="app-container">
+    <div id="feedContainer" class="feed"></div>
+  </div>
 
+  <script src="../js/youtubeFull.js"></script>
+</body>
+</html>
+ 
