--- a/youtube/opaque.html
+++ b/youtube/opaque.html
@@ -11,7 +11,7 @@
     <div id="feedContainer" class="feed"></div>
   </div>
 
-  <script src="../js/youtubeFull.js"></script>
+  <script src="../js/youtubeOpaque.js"></script>
 </body>
 </html>
  
